@@ -1,7 +1,6 @@
 package se.vgregion.common.utils;
 
-import com.liferay.portal.kernel.util.Base64;
-
+import javax.xml.bind.DatatypeConverter;
 import java.io.*;
 import java.util.Locale;
 
@@ -40,7 +39,8 @@ public final class CommonUtils {
      */
     private static Object toObjectImpl(String s) throws IOException,
             ClassNotFoundException {
-        byte[] data = Base64.decode(s);
+        //byte[] data = Base64.decode(s);
+        byte[] data = DatatypeConverter.parseBase64Binary(s);
         //byte[] data = s.getBytes();
         ObjectInputStream ois = new ObjectInputStream(
                 new ByteArrayInputStream(data));
@@ -65,7 +65,8 @@ public final class CommonUtils {
         ObjectOutputStream oos = new ObjectOutputStream(baos);
         oos.writeObject(o);
         oos.close();
-        return new String(Base64.encode(baos.toByteArray()));
+        return DatatypeConverter.printBase64Binary(baos.toByteArray());
+        //return new String(Base64.encode(baos.toByteArray()));
         //return new String(baos.toByteArray());
     }
 
